--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ dj-database-url = "*"
 django-elasticsearch-dsl = "*"
 psycopg2 = "*"
 gunicorn = "*"
+django-celery-beat = "==2.7.0"
 
 [dev-packages]
 
