--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.9'
+
 services:
   web:
     build:
@@ -6,6 +8,7 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
+      - logs_volume:/app/logs
     depends_on:
       - postgres
       - elasticsearch
@@ -15,45 +18,44 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - POSTGRES_DB=restaurant_db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
       - CELERY_BROKER_URL=redis://redis:6379/0
+    env_file:
+      - .env
     networks:
       - restaurant_network
 
-  celery_worker:
+  celery:
     build:
       context: .
-    command: celery -A restora_project worker --loglevel=info
+    command: celery -A restora_project worker -l INFO
     volumes:
       - .:/app
+      - logs_volume:/app/logs
     depends_on:
-      - redis
       - postgres
-    environment:
-      - POSTGRES_HOST=postgres
-      - POSTGRES_DB=restaurant_db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - CELERY_BROKER_URL=redis://redis:6379/0
+      - redis
+      - web
+    env_file:
+      - .env
     networks:
       - restaurant_network
 
-  celery_beat:
+  celery-beat:
     build:
       context: .
-    command: celery -A restora_project beat --loglevel=info
+    command: celery -A restora_project beat -l INFO
     volumes:
       - .:/app
+      - logs_volume:/app/logs
     depends_on:
-      - redis
       - postgres
-    environment:
-      - POSTGRES_HOST=postgres
-      - POSTGRES_DB=restaurant_db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - CELERY_BROKER_URL=redis://redis:6379/0
+      - redis
+      - web
+      - celery
+    env_file:
+      - .env
     networks:
       - restaurant_network
 
@@ -61,8 +63,8 @@ services:
     image: postgres:15
     environment:
       POSTGRES_DB: restaurant_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -88,10 +90,13 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/app/staticfiles
+      - logs_volume:/app/logs
     ports:
       - "80:80"
     depends_on:
       - web
+      - celery
+      - celery-beat
     networks:
       - restaurant_network
 
@@ -103,3 +108,4 @@ volumes:
   postgres_data:
   static_volume:
   media_volume:
+  logs_volume:
