--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,25 +1,30 @@
 server {
     listen 80;
-    server_name localhost 127.0.0.1;
+    server_name 127.0.0.1 localhost 85.132.18.12 pi.backend.az;
 
-    location /static/ {
+    # Static files
+    location /restaurant/static/ {
         alias /app/staticfiles/;
         expires 30d;
         access_log off;
     }
 
-    location / {
-        proxy_pass http://web:8000;  # Web konteynerinə yönləndirir
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # Media files
+    location /restaurant/media/ {
+        alias /app/media/;
+        expires 30d;
+        access_log off;
     }
 
-    # Admin paneli üçün əlavə yönləndirmə (əgər xüsusi bir şey etmək istəyirsinizsə)
-    location /admin/ {
-        proxy_pass http://web:8000;  # Adminə yönləndirmə
+    # All requests under /restaurant/
+    location /restaurant/ {
+        rewrite ^/restaurant/(.*)$ /$1 break;  # /restaurant/ prefiksini silir
+        proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto http; 
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
     }
 }
