test restora_project/ added for alias

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,13 +6,13 @@ server {
     access_log /var/log/nginx/access.log;
 
     location /restaurant/static/ {
-    alias /app/staticfiles/;
+    alias /app/restora_project/staticfiles/;
     expires 30d;
     access_log off;
     }
 
     location /restaurant/media/ {
-        alias /app/media/;
+        alias /app/restora_project/media/;
         expires 30d;
         access_log off;
     }
